Bug 520587: [9] add-reads and add-exports should understand ALL-UNNAMED - improved export from the unnamed module
Change-Id: I0d78d6addcb02dd67ac71ad242be1f9a9b69e41f